--- a/UDKGame/Config/UDKInput.ini
+++ b/UDKGame/Config/UDKInput.ini
@@ -506,28 +506,28 @@ HoverBoardPitchMultiplier=0.5f
 
 [IniVersion]
 0=1335385775.000000
-1=1382989920.000000
+1=1385481647.000000
 
 [utgame.UTConsole]
-HistoryTop=0
-HistoryBot=1
-HistoryCur=0
-History[0]=show BSP
-History[1]=addBots 5
-History[2]=addBots 5555
-History[3]=addbots 1
-History[4]=Camera FirstPerson
-History[5]=restartMap
-History[6]=addBots 25
-History[7]=SSSwapControllers
-History[8]=Camera RPG
-History[9]=addBots 50
-History[10]=addBots 225
-History[11]=addBots 44
-History[12]=nextWeapon
-History[13]=addBots 55
-History[14]=addBots 10
-History[15]=addBots 100
+HistoryTop=7
+HistoryBot=0
+HistoryCur=7
+History[0]=Camera
+History[1]=Camera 1
+History[2]=Camera 2
+History[3]=Camera 3
+History[4]=Camera 0
+History[5]=Say 
+History[6]=TeamSay 
+History[7]=
+History[8]=
+History[9]=
+History[10]=
+History[11]=
+History[12]=
+History[13]=
+History[14]=
+History[15]=
 bEnableUI=False
 bRequireCtrlToNavigateAutoComplete=False
 ManualAutoCompleteList=(Command="Exit",Desc="Exit (Exits the game)")
