--- a/UDKGame/Config/UDKSystemSettings.ini
+++ b/UDKGame/Config/UDKSystemSettings.ini
@@ -29,7 +29,7 @@ FloatingPointRenderTargets=True
 OneFrameThreadLag=True
 UseVsync=False
 UpscaleScreenPercentage=True
-Fullscreen=False
+Fullscreen=True
 AllowOpenGL=False
 AllowRadialBlur=True
 AllowSubsurfaceScattering=True
@@ -58,8 +58,8 @@ MaxWholeSceneDominantShadowResolution=1280
 ShadowFadeResolution=128
 PreShadowFadeResolution=16
 ShadowFadeExponent=0.250000
-ResX=1024
-ResY=768
+ResX=1280
+ResY=720
 ScreenPercentage=100.000000
 SceneCaptureStreamingMultiplier=1.000000
 ShadowTexelsPerPixel=1.300000
