--- a/UDKGame/Config/UDKEngine.ini
+++ b/UDKGame/Config/UDKEngine.ini
@@ -559,9 +559,10 @@ EditPackages=UTGame
 EditPackages=UTGameContent
 EditPackages=Ashes
 EditPackages=UDKMOBA
+FlipNormalMapGreen=False
 
 [UnrealEd.UnrealEdEngine]
-AutoSaveIndex=3
+AutoSaveIndex=2
 PackagesToBeFullyLoadedAtStartup=EditorMaterials
 PackagesToBeFullyLoadedAtStartup=EditorMeshes
 PackagesToBeFullyLoadedAtStartup=EditorResources
@@ -573,7 +574,7 @@ PackagesToBeFullyLoadedAtStartup=MapTemplateIndex
 BrowserManagerClassName=
 ThumbnailManagerClassName=
 FarClippingPlane=0.000000
-GridEnabled=True
+GridEnabled=False
 SnapScaleEnabled=True
 SnapVertices=False
 ScaleGridSize=5
@@ -590,7 +591,7 @@ GridSizes[8]=256.000000
 GridSizes[9]=512.000000
 GridSizes[10]=1024.000000
 CurrentGridSz=4
-RotGridEnabled=True
+RotGridEnabled=False
 RotGridSize=(Pitch=1024,Yaw=1024,Roll=1024)
 AngleSnapType=0
 UseSizingBox=False
@@ -614,8 +615,8 @@ bBuildReachSpecs=False
 bGroupingActive=True
 HeightMapExportClassName=
 InEditorGameURLOptions=?quickstart=1?numplay=1
-PlayInEditorWidth=1024
-PlayInEditorHeight=768
+PlayInEditorWidth=1280
+PlayInEditorHeight=720
 bMobilePreviewPortrait=False
 BuildPlayDevice=0
 TemplateMapFolders=..\..\Engine\Content\Maps\Templates
@@ -1228,14 +1229,19 @@ StatsKeyMappings=(ViewId=1,PropertyId=0x10000142,KeyId=265)
 [IniVersion]
 0=1354902741.000000
 1=1345498010.000000
-2=1383149027.000000
+2=1385481634.000000
 
 [HardwareSurvey]
 LastSurveyVersion=10907
 LastSurveyDate=20131126
 SurveysFailed=0
-SurveysAttempted=6
+SurveysAttempted=1
 
-[AppCompat]
-CompatLevelComposite=5
+[WinDrv.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=True
+FilterKeysHotkey=True
+StickyKeysConfirmation=False
+ToggleKeysConfirmation=False
+FilterKeysConfirmation=False
 
